# neo4j-graph-to-ontology

./: .gitignore  CHATGPT_CLAUDE_REVIEW_RESPONSE.md  CLAUDE_REVIEW.md  CLAUDE_REVIEW_FOLLOWUP.md  README.md  discover.py  graph.jsonld  graph.ttl  main-MAIN.py  main.py  ontology.ttl  pyproject.toml  report.html  shapes.ttl  strategy.txt  test_neo4j_reader.py  test_rdf_serializer.py  test_semantic_graph.py  test_semantic_model.py  validate.py  validation_report.txt
.github/workflows/: pages.yaml
docs/: graph.jsonld  graph.ttl  index.html  ontology_nary.ttl  shapes.ttl
docs/schema_org/: de54.json  hgx2.json
neo4j_graph_to_ontology.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ontology_toolkit/: __init__.py  alignments.py  config.py  connection.py  discover_schema.py  export_common.py  export_html.py  export_jsonld.py  export_rdf.py  export_rdf_nary.py  export_schema_org.py  generate_ontology.py  generate_ontology_nary.py  generate_shacl.py  models.py  neo4j_reader.py  ontology_common.py  paths.py  printer.py  property_analysis.py  schema_model.py  semantic_model.py  uri.py  validate_shacl.py  vocab.py
ontology_toolkit/report/: generated_artifacts.py  layout.py  node_types.py  overview.py  pipeline.py  relationship_types.py  schema_summary.py  styles.py  table_of_contents.py
ontology_toolkit/serializers/: jsonld.py  rdf.py  rdf_nary.py  rdf_star.py  schema_org.py
ontology_toolkit/services/: discovery.py  validation.py
output/: graph.jsonld
schema_org/: de54.json  dj326.json  hgx2.json  jd732.json
scratch/: test_rdf_star.py
