[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-graph-to-ontology"
version = "0.1.0"
description = "Generate Semantic Web artifacts from Neo4j property graphs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
  { name = "Chris Lastovicka" }
]

keywords = [
  "neo4j",
  "knowledge-graph",
  "rdf",
  "owl",
  "json-ld",
  "schema-org",
  "semantic-web",
  "shacl"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "neo4j>=6.2.0",
  "rdflib>=7.6.0",
  "pyshacl>=0.40.0",
  "python-dotenv>=1.2.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ontology_toolkit*"]
exclude = ["output*", "docs*", "tests*"]